Fix reporting textarea display on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -683,7 +683,8 @@ footer .footer-content a {
   #reporting-form label,
   #reporting-form input,
   #reporting-form button,
-  #reporting-form fieldset {
+  #reporting-form fieldset,
+  #reporting-form textarea {
     width: 100%;
   }
 
